Changed method to resolve problems tied with Java version